--- a/ui_spatialplot.ui
+++ b/ui_spatialplot.ui
@@ -88,14 +88,14 @@
    <item row="1" column="0" rowspan="2" colspan="2">
     <widget class="QListWidget" name="listWidgetAttributes">
      <property name="selectionMode">
-      <enum>QAbstractItemView::MultiSelection</enum>
+      <enum>QAbstractItemView::ExtendedSelection</enum>
      </property>
     </widget>
    </item>
    <item row="1" column="3" rowspan="2">
     <widget class="QListWidget" name="listWidgetYAxis">
      <property name="selectionMode">
-      <enum>QAbstractItemView::MultiSelection</enum>
+      <enum>QAbstractItemView::ExtendedSelection</enum>
      </property>
     </widget>
    </item>
