Added action.png to resources

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/plugins/spatialplot" >
+    <qresource prefix="/plugins/spatialplot">
         <file>icon.png</file>
+        <file>action.png</file>
     </qresource>
 </RCC>
